--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ language: go
 go:
  - tip
 
-script: go test
+before_install:
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
+
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
